--- a/templates/workhub/index.ejs
+++ b/templates/workhub/index.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <!--Head-->
-<%- include(`${templatePath}/shared/head`, {SEO:false, Title:'workhub | Vicky Wang', 
+<%- include(`${templatePath}/shared/head`, {SEO:true, Title:'workhub | Vicky Wang', 
   description:'UX designer focused on system clarity, scalable flows, and meaningful product impact—across both B2B platforms and consumer journeys.', 
   pageURL:'workhub', thumbnailImgURL: 'vickywang.svg'
   }) %>
@@ -45,9 +45,9 @@
               </div>
             </div>
             <div class="spacingXSmall"></div>
-            <h1 class="workhubLandingTitle"> Marketplaces & Platform UX, shipping scalable flows for B2B and B2C.
+            <h1 class="workhubLandingTitle"> Marketplace & platform UX for providers and travelers
             </h1>
-            <h3 class="fontWeight300">I design scalable flows and tooling for platforms and high-volume users.
+            <h3 class="fontWeight300">I design scalable provider tools and high-traffic consumer flows for marketplaces.
             </h3>
           </div>
 
