--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -625,9 +625,12 @@
         <div class="Grid Grid--full Grid--gutter">
           <div class="Grid-cell">
             <div class="element">
-              <h2 class="fontWeight500 Grey600">vickywang.me</h2>
+              <h1 class="fontWeight500 Grey600">vickywang.me</h1>
+
               <h4 class="">Marketplace & platform UX for high-volume users</h4>
             </div>
+            <div class="spacingSmall"></div>
+
             <div class="rowLeftAligned">
               <div class="ClipboardBoxIconOnly">
                 <button class="ClipboardIconOnly">
@@ -650,7 +653,19 @@
           </div>
 
         </div>
-        <div class="spacingLarge"></div>
+        <div class="Grid Grid--full Grid--gutter">
+          <div class="Grid-cell">
+            <div class="element">
+              <div class="spacingXLarge"></div>
+              
+                <h4 class="" id="backToTop">Back to top</h4>
+             
+            </div>
+          </div>
+        </div>
+
+
+        <div class="spacingMedium"></div>
         <div class="Grid Grid--full Grid--gutters">
           <div class="Grid-cell">
             <div class="footerBorder">
