--- a/templates/babyquip/index.ejs
+++ b/templates/babyquip/index.ejs
@@ -86,7 +86,7 @@
 
 
 
-        <li class="displayLaptop"> <button class="Button Primary marginSFix ">Sign up</button></li>
+        <li class="displayDesktop"> <button class="Button Primary marginSFix ">Sign up</button></li>
 
         </li>
 
@@ -101,7 +101,7 @@
 
 
 
-    <div class="ProjectBanner displayLaptop">
+    <div class="ProjectBanner displayDesktop">
 
       <img src="image_monitor.jpg" alt="">
 
