--- a/templates/design_system/index.ejs
+++ b/templates/design_system/index.ejs
@@ -24,7 +24,7 @@ pageURL:'design_system', thumbnailImgURL: 'vickywang_web.png'
   <!-- header image -->
   <div class="colorBgVW pattern2">
     <div class="blankPhone"></div>
-    <div class="ProjectBanner displayLaptop">
+    <div class="ProjectBanner displayDesktop">
       <div class="blankMin1880"></div>
       <img src="MockupL.png" alt="vickywang.me">
 
