--- a/templates/design_system/navigation/V1/index.ejs
+++ b/templates/design_system/navigation/V1/index.ejs
@@ -20,7 +20,7 @@ pageURL:'design_system/navigation/V1/', thumbnailImgURL: 'vickywang_web.png'
   <div class="GreyBg200">
     <div class="blankPhone"></div>
     <div class="blankHS"></div>
-    <div class="ProjectBanner displayLaptop">
+    <div class="ProjectBanner displayDesktop">
       <div class="blankMin1880"></div>
       <img src="Mockup.png" alt="vickywang.me">
 
