--- a/templates/seer/index.ejs
+++ b/templates/seer/index.ejs
@@ -28,7 +28,7 @@
   <div class="BGseer2_1">
     <div class="blankPhone"></div>
     <div class="blankHS"></div>
-    <div class="ProjectBanner displayLaptop">
+    <div class="ProjectBanner displayDesktop">
       <div class="blankMin1880"></div>
       <img class="" src="Mockup.png" alt="SEER">
 
