--- a/templates/shared/block_bannerNoButton.ejs
+++ b/templates/shared/block_bannerNoButton.ejs
@@ -29,7 +29,7 @@
   
   
   
-    <div class="ProjectBanner displayLaptop">
+    <div class="ProjectBanner displayDesktop">
   
       <img src="<%- bannerMockupL %>" alt="Mockup">
       <div class="ProjectBannerInnerND">
