--- a/templates/shared/projectLanding.ejs
+++ b/templates/shared/projectLanding.ejs
@@ -1,7 +1,7 @@
   <div class="GreyBg200">
     <div class="blankPhone"></div>
     <div class="blankHS"></div>
-    <div class="ProjectBanner displayLaptop">
+    <div class="ProjectBanner displayDesktop">
       <div class="blankMin1880"></div>
       <img src="Mockup.png" alt="vickywang.me">
 
