--- a/templates/workdeck/index.ejs
+++ b/templates/workdeck/index.ejs
@@ -84,9 +84,9 @@
         <div class="Grid-cell displayTablet">
         </div>
 
-        <div class="Grid-cell displayLaptop">
+        <div class="Grid-cell displayDesktop">
         </div>
-        <div class="Grid-cell displayLaptop">
+        <div class="Grid-cell displayDesktop">
         </div>
 
       </div>
