--- a/templates/worklog/index.ejs
+++ b/templates/worklog/index.ejs
@@ -46,9 +46,9 @@
   <div class="wrapper">
 
     <div class="Grid Grid--gutters Grid--cols-8 ">
-      <div class="Grid-cell displayLaptop">
+      <div class="Grid-cell displayDesktop">
       </div>
-      <div class="Grid-cell displayLaptop">
+      <div class="Grid-cell displayDesktop">
       </div>
       <div class="Grid-cell displayTablet">
       </div>
@@ -77,7 +77,7 @@
           <img class="iconM hoverWhite paddingM fitContentax borderRadiusMax" src="../icon/Codepen.svg" alt="CodePen">
         </a>
       </div>
-      <div class="Grid-cell centerVH displayLaptop">
+      <div class="Grid-cell centerVH displayDesktop">
         <div class="dropdownSM">
           <img title="Share" class="iconM hoverWhite paddingM fitContent borderRadiusMax dropbtn" src="../icon/share.svg" alt="Share">
           <div class="dropdownSM-content">
@@ -90,9 +90,9 @@
       <div class="Grid-cell displayTablet">
       </div>
 
-      <div class="Grid-cell displayLaptop">
+      <div class="Grid-cell displayDesktop">
       </div>
-      <div class="Grid-cell displayLaptop">
+      <div class="Grid-cell displayDesktop">
       </div>
 
     </div>
@@ -219,7 +219,7 @@
 
 
 
-        <div class="Grid Grid--full Grid--gutter displayLaptop">
+        <div class="Grid Grid--full Grid--gutter displayDesktop">
           <div class="Grid-cell">
             <div class="element">
               <div class="spacingSmall"></div>
@@ -325,14 +325,14 @@
       </div>
 
 
-      <div class="Grid Grid--full Grid--gutter displayLaptop">
+      <div class="Grid Grid--full Grid--gutter displayDesktop">
         <div class="Grid-cell">
           <div class="element">
             <img class="modal-target" src="cover_mobile_journey.svg" alt="">
           </div>
         </div>
       </div>
-      <div class="Grid Grid--full Grid--gutter displayLaptop">
+      <div class="Grid Grid--full Grid--gutter displayDesktop">
         <div class="Grid-cell">
           <div class="element">
             <h4><span class=" fontWeight700">Mobile App (B2C)</span></h4>
@@ -506,7 +506,7 @@
           </div>
         </div>
       </div>
-      <div class="Grid Grid--full Grid--gutter displayLaptop">
+      <div class="Grid Grid--full Grid--gutter displayDesktop">
         <div class="Grid-cell">
           <div class="element">
             <img class="modal-target" src="cover_mobile_journey_web.svg" alt="">
