--- a/templates/worklog/mobile_wireframe/index.ejs
+++ b/templates/worklog/mobile_wireframe/index.ejs
@@ -17,7 +17,7 @@
         }) %>
 
 
-<div class="ProjectBanner displayLaptop">
+<div class="ProjectBanner displayDesktop">
 
   <img src="MockupL.png" alt="Mockup">
   <div class="ProjectBannerInnerND">
