--- a/templates/workroom/index.ejs
+++ b/templates/workroom/index.ejs
@@ -25,7 +25,7 @@
   <div class="wrapper">
     <div class="Grid Grid--full Grid--gutter">
       <div class="Grid-cell">
-        <div class="element displayLaptop u-textCenter">
+        <div class="element displayDesktop u-textCenter">
           <h1 class="t-hello">👋🏻 hello, I'm Vicky</h1>
           <div class="spacingSmall"></div>
 
@@ -68,9 +68,9 @@
   <div class="wrapper">
 
     <div class="Grid Grid--gutters Grid--cols-8 ">
-      <div class="Grid-cell displayLaptop">
+      <div class="Grid-cell displayDesktop">
       </div>
-      <div class="Grid-cell displayLaptop">
+      <div class="Grid-cell displayDesktop">
       </div>
       <div class="Grid-cell displayTablet">
       </div>
@@ -99,7 +99,7 @@
           <img class="iconM hoverWhite paddingM fitContentax borderRadiusMax" src="../icon/Codepen.svg" alt="CodePen">
         </a>
       </div>
-      <div class="Grid-cell centerVH displayLaptop">
+      <div class="Grid-cell centerVH displayDesktop">
         <div class="dropdownSM">
           <img title="Share" class="iconM hoverWhite paddingM fitContent borderRadiusMax dropbtn" src="../icon/share.svg" alt="Share">
           <div class="dropdownSM-content">
@@ -112,9 +112,9 @@
       <div class="Grid-cell displayTablet">
       </div>
 
-      <div class="Grid-cell displayLaptop">
+      <div class="Grid-cell displayDesktop">
       </div>
-      <div class="Grid-cell displayLaptop">
+      <div class="Grid-cell displayDesktop">
       </div>
 
     </div>
@@ -122,7 +122,7 @@
   </div>
 
   <div class="blankHXXS"></div>
-  <div class="wrapper displayLaptop">
+  <div class="wrapper displayDesktop">
     <div class="Grid Grid--gutters Grid--cols-2 Grid--center">
       <div class="element">
         <a href="/resume2025"> <button class="buttonLarge buttonPrimary bgVWGrey">Resume & Experience
