--- a/templates/workshelf/index.ejs
+++ b/templates/workshelf/index.ejs
@@ -58,9 +58,9 @@
 
 
       <div class="Grid Grid--gutters Grid--cols-8">
-        <div class="Grid-cell displayLaptop">
+        <div class="Grid-cell displayDesktop">
         </div>
-        <div class="Grid-cell displayLaptop">
+        <div class="Grid-cell displayDesktop">
         </div>
         <div class="Grid-cell displayTablet">
         </div>
@@ -89,7 +89,7 @@
             <img class="iconS hoverGrey100 paddingM fitContentax borderRadiusMax" src="../icon/Codepen.svg" alt="CodePen">
           </a>
         </div>
-        <div class="Grid-cell centerVH displayLaptop">
+        <div class="Grid-cell centerVH displayDesktop">
           <div class="dropdownSM">
             <img title="Share" class="iconS hoverGrey100 paddingM fitContent borderRadiusMax dropbtn" src="../icon/share.svg" alt="Share">
             <div class="dropdownSM-content">
@@ -102,9 +102,9 @@
         <div class="Grid-cell displayTablet">
         </div>
 
-        <div class="Grid-cell displayLaptop">
+        <div class="Grid-cell displayDesktop">
         </div>
-        <div class="Grid-cell displayLaptop">
+        <div class="Grid-cell displayDesktop">
         </div>
       </div>
 
