--- a/templates/appointa/index.ejs
+++ b/templates/appointa/index.ejs
@@ -26,7 +26,7 @@
   <div class="colorBgAPPOINTA">
     <div class="blankPhone"></div>
     <div class="blankHS"></div>
-    <div class="ProjectBanner displayLaptop">
+    <div class="ProjectBanner displayDesktop">
       <div class="blankMin1880"></div>
       <img src="Mockup.png" alt="APPOINTA">
 
