--- a/templates/design_system/navigation/V2/index.ejs
+++ b/templates/design_system/navigation/V2/index.ejs
@@ -19,7 +19,7 @@ pageURL:'design_system/navigation/V2/', thumbnailImgURL: 'vickywang_web.png'
     <div class="GreyBg200">
       <div class="blankPhone"></div>
       <div class="blankHS"></div>
-      <div class="ProjectBanner displayLaptop">
+      <div class="ProjectBanner displayDesktop">
         <div class="blankMin1880"></div>
         <img src="Mockup.png" alt="vickywang.me">
 
