--- a/templates/glorify/index.ejs
+++ b/templates/glorify/index.ejs
@@ -27,7 +27,7 @@
   <div class="colorBgGLORIFY">
     <div class="blankPhone"></div>
 
-    <div class="ProjectBanner displayLaptop">
+    <div class="ProjectBanner displayDesktop">
       <img src="Mockup.png" alt="GLORIFY">
       <div class="ProjectBannerInnerND">
         <img class="widthXXS" src="Logo_Glorify.png" alt="GLORIFY">
@@ -286,10 +286,10 @@
 
       <div class="Grid Grid--gutters Grid--cols-3 u-textCenter ">
         <div class="Grid-cell">
-          <div class="element displayLaptop progress">
+          <div class="element displayDesktop progress">
             <img class="gif-toggle widthS " data-gif="HiFi_GroupPrayer_QuickStartPtt.gif" data-static="HiFi_GroupPrayerCover.png" src="HiFi_GroupPrayerCover.png" />
           </div>
-          <!-- displayLaptop -->
+          <!-- displayDesktop -->
 
           <div class="element displayTablet progress">
             <img class="gif-toggle widthS" data-gif="HiFi_GroupPrayer_QuickStartPtt.gif" data-static="HiFi_GroupPrayerCoverTap.png" src="HiFi_GroupPrayerCoverTap.png" />
@@ -308,10 +308,10 @@
 
 
         <div class="Grid-cell">
-          <div class="element displayLaptop progress">
+          <div class="element displayDesktop progress">
             <img class="gif-toggle widthS" data-gif="HiFi_GroupPrayer_CustomPtt.gif" data-static="HiFi_GroupPrayerCover.png" src="HiFi_GroupPrayerCover.png" />
           </div>
-          <!-- displayLaptop -->
+          <!-- displayDesktop -->
           <div class="element displayTablet progress">
             <img class="gif-toggle widthS" data-gif="HiFi_GroupPrayer_CustomPtt.gif" data-static="HiFi_GroupPrayerCoverTap.png" src="HiFi_GroupPrayerCoverTap.png" />
           </div>
@@ -328,10 +328,10 @@
 
 
         <div class="Grid-cell">
-          <div class="element displayLaptop progress">
+          <div class="element displayDesktop progress">
             <img class="gif-toggle widthS" data-gif="HiFi_GroupPrayer_JoinPtt.gif" data-static="HiFi_GroupPrayerCover.png" src="HiFi_GroupPrayerCover.png" />
           </div>
-          <!-- displayLaptop -->
+          <!-- displayDesktop -->
           <div class="element displayTablet progress">
             <img class="gif-toggle widthS" data-gif="HiFi_GroupPrayer_JoinPtt.gif" data-static="HiFi_GroupPrayerCoverTap.png" src="HiFi_GroupPrayerCoverTap.png" />
           </div>
@@ -363,10 +363,10 @@
 
       <div class="Grid Grid--gutters Grid--cols-2 u-textCenter">
         <div class="Grid-cell">
-          <div class="element displayLaptop progress">
+          <div class="element displayDesktop progress">
             <img class="gif-toggle widthS" data-gif="HiFi_FinalPrayer.gif" data-static="HiFi_FinalPrayer.png" src="HiFi_FinalPrayer.png" />
           </div>
-          <!-- displayLaptop -->
+          <!-- displayDesktop -->
           <div class="element displayTablet progress">
             <img class="gif-toggle widthS" data-gif="HiFi_FinalPrayer.gif" data-static="HiFi_FinalPrayerTap.png" src="HiFi_FinalPrayerTap.png" />
           </div>
@@ -381,10 +381,10 @@
         </div>
 
         <div class="Grid-cell">
-          <div class="element displayLaptop progress">
+          <div class="element displayDesktop progress">
             <img class="gif-toggle widthS" data-gif="HiFi_FinalEnhancement.gif" data-static="HiFi_FinalEnhancement.png" src="HiFi_FinalEnhancement.png" />
           </div>
-          <!-- displayLaptop -->
+          <!-- displayDesktop -->
           <div class="element displayTablet progress">
             <img class="gif-toggle widthS" data-gif="HiFi_FinalEnhancement.gif" data-static="HiFi_FinalEnhancementTap.png" src="HiFi_FinalEnhancementTap.png" />
           </div>
@@ -3891,10 +3891,10 @@
               <div class="TBslidesItem slide-1" id="slide-1" aria-label="slide 1 of 2" tabindex="0">
                 <div class="Grid Grid--gutters Grid--cols-2 u-textCenter wrapper">
                   <div class="Grid-cell">
-                    <div class="element displayLaptop progress">
+                    <div class="element displayDesktop progress">
                       <img class="gif-toggle widthS" data-gif="Iterate_Flow_GroupPrayer_Create_PreviousVersion.gif" data-static="Iterate_Flow_GroupPrayer_Create_PreviousVersion.png" src="Iterate_Flow_GroupPrayer_Create_PreviousVersion.png" />
                     </div>
-                    <!-- displayLaptop -->
+                    <!-- displayDesktop -->
                     <div class="element displayTablet progress">
                       <img class="gif-toggle widthS" data-gif="Iterate_Flow_GroupPrayer_Create_PreviousVersion.gif" data-static="Iterate_Flow_GroupPrayer_Create_PreviousVersionTap.png" src="Iterate_Flow_GroupPrayer_Create_PreviousVersionTap.png" />
                     </div>
@@ -3910,10 +3910,10 @@
                   </div>
 
                   <div class="Grid-cell">
-                    <div class="element displayLaptop progress">
+                    <div class="element displayDesktop progress">
                       <img class="gif-toggle widthS" data-gif="Iterate_Flow_GroupPrayer_Create_CurrentVersion.gif" data-static="Iterate_Flow_GroupPrayer_Create_CurrentVersion.png" src="Iterate_Flow_GroupPrayer_Create_CurrentVersion.png" />
                     </div>
-                    <!-- displayLaptop -->
+                    <!-- displayDesktop -->
                     <div class="element displayTablet progress">
                       <img class="gif-toggle widthS" data-gif="Iterate_Flow_GroupPrayer_Create_CurrentVersion.gif" data-static="Iterate_Flow_GroupPrayer_Create_CurrentVersionTap.png" src="Iterate_Flow_GroupPrayer_Create_CurrentVersionTap.png" />
                     </div>
@@ -3936,10 +3936,10 @@
 
                 <div class="Grid Grid--gutters Grid--cols-2 u-textCenter wrapper">
                   <div class="Grid-cell">
-                    <div class="element displayLaptop progress">
+                    <div class="element displayDesktop progress">
                       <img class="gif-toggle widthS" data-gif="Iterate_Flow_GroupPrayer_Join_PreviousVersion.gif" data-static="Iterate_Flow_GroupPrayer_Create_PreviousVersion.png" src="Iterate_Flow_GroupPrayer_Create_PreviousVersion.png" />
                     </div>
-                    <!-- displayLaptop -->
+                    <!-- displayDesktop -->
                     <div class="element displayTablet progress">
                       <img class="gif-toggle widthS" data-gif="Iterate_Flow_GroupPrayer_Join_PreviousVersion.gif" data-static="Iterate_Flow_GroupPrayer_Create_PreviousVersionTap.png" src="Iterate_Flow_GroupPrayer_Create_PreviousVersionTap.png" />
                     </div>
@@ -3955,10 +3955,10 @@
                   </div>
 
                   <div class="Grid-cell">
-                    <div class="element displayLaptop progress">
+                    <div class="element displayDesktop progress">
                       <img class="gif-toggle widthS" data-gif="Iterate_Flow_GroupPrayer_Join_CurrentVersion.gif" data-static="Iterate_Flow_GroupPrayer_Create_CurrentVersion.png" src="Iterate_Flow_GroupPrayer_Create_CurrentVersion.png" />
                     </div>
-                    <!-- displayLaptop -->
+                    <!-- displayDesktop -->
                     <div class="element displayTablet progress">
                       <img class="gif-toggle widthS" data-gif="Iterate_Flow_GroupPrayer_Join_CurrentVersion.gif" data-static="Iterate_Flow_GroupPrayer_Create_CurrentVersionTap.png" src="Iterate_Flow_GroupPrayer_Create_CurrentVersionTap.png" />
                     </div>
@@ -4718,10 +4718,10 @@
           <!-- Img -->
           <div class="Grid Grid--gutters Grid--cols-2 u-textCenter wrapper">
             <div class="Grid-cell">
-              <div class="element displayLaptop progress">
+              <div class="element displayDesktop progress">
                 <img class="gif-toggle widthS" data-gif="HiFi_FinalPrayer.gif" data-static="HiFi_FinalPrayer.png" src="HiFi_FinalPrayer.png" />
               </div>
-              <!-- displayLaptop -->
+              <!-- displayDesktop -->
               <div class="element displayTablet progress">
                 <img class="gif-toggle widthS" data-gif="HiFi_FinalPrayer.gif" data-static="HiFi_FinalPrayerTap.png" src="HiFi_FinalPrayerTap.png" />
               </div>
@@ -4736,10 +4736,10 @@
             </div>
 
             <div class="Grid-cell">
-              <div class="element displayLaptop progress">
+              <div class="element displayDesktop progress">
                 <img class="gif-toggle widthS" data-gif="HiFi_FinalEnhancement.gif" data-static="HiFi_FinalEnhancement.png" src="HiFi_FinalEnhancement.png" />
               </div>
-              <!-- displayLaptop -->
+              <!-- displayDesktop -->
               <div class="element displayTablet progress">
                 <img class="gif-toggle widthS" data-gif="HiFi_FinalEnhancement.gif" data-static="HiFi_FinalEnhancementTap.png" src="HiFi_FinalEnhancementTap.png" />
               </div>
