--- a/templates/workfolder/index.ejs
+++ b/templates/workfolder/index.ejs
@@ -42,9 +42,9 @@
     <div class="wrapper ">
 
       <div class="Grid Grid--gutters Grid--cols-8 ">
-        <div class="Grid-cell displayLaptop">
+        <div class="Grid-cell displayDesktop">
         </div>
-        <div class="Grid-cell displayLaptop">
+        <div class="Grid-cell displayDesktop">
         </div>
         <div class="Grid-cell displayTablet">
         </div>
@@ -73,7 +73,7 @@
             <img class="iconM hoverGrey100 paddingM fitContentax borderRadiusMax" src="../icon/Codepen.svg" alt="CodePen">
           </a>
         </div>
-        <div class="Grid-cell centerVH displayLaptop">
+        <div class="Grid-cell centerVH displayDesktop">
           <div class="dropdownSM">
             <img title="Share" class="iconM hoverGrey100 paddingM fitContent borderRadiusMax dropbtn" src="../icon/share.svg" alt="Share">
             <div class="dropdownSM-content">
@@ -86,9 +86,9 @@
         <div class="Grid-cell displayTablet">
         </div>
 
-        <div class="Grid-cell displayLaptop">
+        <div class="Grid-cell displayDesktop">
         </div>
-        <div class="Grid-cell displayLaptop">
+        <div class="Grid-cell displayDesktop">
         </div>
 
       </div>
