--- a/templates/worklog/mobile_landing/index.ejs
+++ b/templates/worklog/mobile_landing/index.ejs
@@ -47,9 +47,9 @@
   <div class="wrapper">
 
     <div class="Grid Grid--gutters Grid--cols-8 ">
-      <div class="Grid-cell displayLaptop">
+      <div class="Grid-cell displayDesktop">
       </div>
-      <div class="Grid-cell displayLaptop">
+      <div class="Grid-cell displayDesktop">
       </div>
       <div class="Grid-cell displayTablet">
       </div>
@@ -78,7 +78,7 @@
           <img class="iconM hoverWhite paddingM fitContentax borderRadiusMax" src="../icon/Codepen.svg" alt="CodePen">
         </a>
       </div>
-      <div class="Grid-cell centerVH displayLaptop">
+      <div class="Grid-cell centerVH displayDesktop">
         <div class="dropdownSM">
           <img title="Share" class="iconM hoverWhite paddingM fitContent borderRadiusMax dropbtn" src="../icon/share.svg" alt="Share">
           <div class="dropdownSM-content">
@@ -91,9 +91,9 @@
       <div class="Grid-cell displayTablet">
       </div>
 
-      <div class="Grid-cell displayLaptop">
+      <div class="Grid-cell displayDesktop">
       </div>
-      <div class="Grid-cell displayLaptop">
+      <div class="Grid-cell displayDesktop">
       </div>
 
     </div>
